--- a/src/app/main/[id]/id_style.scss
+++ b/src/app/main/[id]/id_style.scss
@@ -28,7 +28,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     margin-bottom: 50px;
-    gap: 15px;
+    grid-gap: 15px;
 }
 
 .title-content-card {
@@ -40,5 +40,34 @@
     >h1 {
         font-size: 22px;
         margin-left: 5px;
+    }
+}
+
+@media(max-width: 1200px) {
+
+    .grid-container {
+        grid-template-columns: repeat(2 , 1fr);
+        width: 100%;
+        box-sizing: border-box;
+        justify-items: center;
+    }
+
+    .title-content-card{
+        justify-content: center;
+        margin-bottom: 25px;
+    }
+}
+
+@media(max-width: 480px) {
+
+    .grid-container {
+        grid-template-columns: repeat(1 , 1fr);
+    }
+
+    .wrapp {
+
+        >h2 {
+            text-align: center;
+        }
     }
 }
