--- a/src/app/ui/card_component/card_post.scss
+++ b/src/app/ui/card_component/card_post.scss
@@ -4,6 +4,7 @@
     border-radius: 10px;
     border: #e0e0e0 solid 1px;
     color: #26262e;
+    word-wrap: break-word;
 
     >img {
         width: 100%;
@@ -26,5 +27,52 @@ h2 {
         margin: 10px 0px;
         color: #949497;
         text-decoration: none;
+    }
+}
+
+@media(max-width: 800px) {
+    .card_post {
+        width: 300px;
+        height: 280px;
+
+        img {
+            width: 100%;
+            height: 100px;
+            border-radius: 10px 10px 0 0;
+        }
+    }
+
+    h2 {
+        margin: 15px 0px;
+        font-size: 22px;
+    }
+}
+
+@media(max-width: 768px) {}
+
+@media(max-width: 480px) {
+
+    .card_post {
+        width: 285px;
+        height: 330px;
+
+        img {
+            width: 100%;
+            height: 100px;
+            border-radius: 10px 10px 0 0;
+        }
+    }
+}
+
+@media(max-width: 320px) {
+    .card_post {
+        width: 260px;
+        height: 330px;
+
+        img {
+            width: 100%;
+            height: 100px;
+            border-radius: 10px 10px 0 0;
+        }
     }
 }
