--- a/src/app/ui/create_post/create_post.scss
+++ b/src/app/ui/create_post/create_post.scss
@@ -3,11 +3,21 @@
     height: 35px;
     background-color: transparent;
     border: 1px solid rgb(32, 32, 34);
+    transition: 0.3s;
+
+    &:hover {
+        background-color: #e0e0e0;
+        color: rgb(86, 86, 88);
+    }
+
+    &:active {
+        background-color: #e0e0e0;
+        color: rgb(86, 86, 88);
+    }
 }
 
 .wrapper-create-form {
-    margin: 0px 80px;
-    margin-top: 20px;
+    margin: 20px 80px 50px 80px;
     padding: 20px;
     border: #e0e0e0 solid 1px;
     box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.6);
@@ -15,6 +25,12 @@
     >h1 {
         padding: 10px 0px;
         border-bottom: 1px solid rgb(32, 32, 34);
+    }
+
+    p {
+        font-size: 15px;
+        margin: 15px 0px 25px 0px;
+        color: rgb(255, 63, 50);
     }
 
     >form {
@@ -31,6 +47,7 @@
 
             >input {
                 @include input-style;
+
             }
 
             >select {
@@ -45,7 +62,6 @@
             >input[type='file'] {
                 font-size: 0;
                 margin: 0;
-                border-radius: 0px 10px 10px 0px;
 
                 &::file-selector-button {
                     cursor: pointer;
