--- a/src/app/ui/layout_component/layout_component.scss
+++ b/src/app/ui/layout_component/layout_component.scss
@@ -1,5 +1,14 @@
 $paddingLayout: 0px 80px;
 
+@mixin animation_teg {
+    color: #fff;
+    transition: 0.3s;
+
+    &:hover {
+        color: #ffffff62;
+    }
+}
+
 .header {
     display: flex;
     padding: 25px 80px;
@@ -11,6 +20,7 @@ $paddingLayout: 0px 80px;
     font-size: 24px;
     position: fixed;
     box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.6);
+    z-index: 999999;
 
     form {
         height: 45px;
@@ -53,8 +63,98 @@ $paddingLayout: 0px 80px;
 .footer {
     text-align: center;
     color: #fff;
-    height: 64px;
-    padding: 0 48px;
-    background-color:rgb(32, 32, 34);
+    background-color: rgb(32, 32, 34);
+    padding: 25px 80px;
+}
+
+.wrapper_footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav {
+    display: flex;
+    flex-direction: column;
+
+    >a {
+        text-decoration: none;
+        font-size: 16px;
+        margin-bottom: 5px;
+        @include animation_teg
+    }
+}
+
+.icons {
     font-size: 24px;
+}
+
+.icon {
+    margin-right: 10px;
+    cursor: pointer;
+    @include animation_teg
+}
+
+.icon_user {
+    @include animation_teg
+}
+
+@media(max-width: 1200px) {
+
+    .header {
+        padding: 25px 60px;
+    }
+
+    .content {
+        padding: 0px 60px;
+    }
+
+    .footer {
+        padding: 25px 60px;
+    }
+}
+
+@media(max-width: 768px) {
+
+    .header {
+        padding: 25px 45px;
+    }
+
+    .content {
+        padding: 0px 45px;
+    }
+
+    .footer {
+        padding: 25px 45px;
+    }
+}
+
+@media(max-width: 480px) {
+
+    .header {
+        padding: 25px 15px;
+    }
+
+    .content {
+        padding: 0px 15px;
+    }
+
+    .footer {
+        padding: 25px 15px;
+    }
+}
+
+@media(max-width: 340px) {
+
+    .header {
+        padding: 25px 10px;
+    }
+
+    .content {
+        padding: 0px 10px;
+    }
+
+    .footer {
+        padding: 25px 10px;
+    }
 }
