--- a/src/app/ui/main/main.scss
+++ b/src/app/ui/main/main.scss
@@ -4,6 +4,15 @@
     margin-bottom: 50px;
 }
 
+.wrapp {
+
+    >h2 {
+        margin: 15px 0px;
+        font-size: 25px;
+        color: rgb(32, 32, 34);
+    }
+}
+
 .card {
     width: 440px;
     height: 240px;
@@ -28,4 +37,87 @@
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+}
+
+@media(max-width: 1280px) {
+    .card {
+        width: 375px;
+        height: 240px;
+    }
+
+    .gridCard {
+        gap: 15px;
+    }
+}
+
+@media(max-width: 1200px) {
+
+    .gridCard {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-bottom: 50px;
+    }
+
+    .wrapp {
+
+        >h2 {
+            margin: 15px 50px;
+        }
+    }
+}
+
+@media(max-width: 800px) {
+    .card {
+        width: 300px;
+        height: 140px;
+    }
+
+    .mask {
+        >h1 {
+            font-size: 18px;
+        }
+    }
+
+    .gridCard {
+        gap: 15px;
+    }
+
+    .wrapp {
+
+        >h2 {
+            margin: 15px 0px;
+            font-size: 22px;
+        }
+    }
+}
+
+@media(max-width: 768px) {}
+
+@media(max-width: 480px) {
+
+    .card {
+        width: 300px;
+        height: 140px;
+    }
+
+    .gridCard {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        margin-bottom: 50px;
+    }
+
+    .wrapp {
+
+        >h2 {
+            text-align: center;
+        }
+    }
+}
+
+@media(max-width: 340px) {
+
+    .card {
+        width: 240px;
+        height: 140px;
+    }
 }
