--- a/src/app/ui/profile/profile_component.scss
+++ b/src/app/ui/profile/profile_component.scss
@@ -6,7 +6,7 @@
 
     >.bg {
         width: 100%;
-        height: 250px;
+        height: 370px;
         border-radius: 10px 10px 0px 0px;
     }
 
@@ -31,15 +31,11 @@
         padding: 5px;
         cursor: pointer;
     }
-    
-    >h1{
+
+    >h1 {
         font-size: 22px;
     }
 
-}
-
-.wrapper-component-profile {
-    padding: 0px 80px;
 }
 
 .grid-container {
@@ -62,5 +58,42 @@
     >h1 {
         font-size: 22px;
         margin-left: 5px;
+    }
+}
+
+@media(max-width: 1200px) {
+
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+        width: 100%;
+        box-sizing: border-box;
+        justify-items: center;
+    }
+
+    .title-content-card {
+        justify-content: center;
+        margin-bottom: 25px;
+    }
+}
+
+
+@media(max-width: 480px) {
+
+    .grid-container {
+        grid-template-columns: repeat(1, 1fr);
+       
+    }
+
+    .wrapper-button{
+        display: flex;
+        justify-content: center;
+    }
+
+    .main-info-block{
+        flex-direction: column;
+
+        button{
+            margin-top: 25px;
+        }
     }
 }
