--- a/src/app/ui/registration_component/registration_from.scss
+++ b/src/app/ui/registration_component/registration_from.scss
@@ -14,6 +14,12 @@
     box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.6);
     border-radius: 10px;
 
+    p , li {
+        font-size: 15px;
+        margin: 5px 0px 10px 0px;
+        color: rgb(255, 63, 50)
+    }
+
     >div {
         display: flex;
         flex-direction: column;
@@ -38,6 +44,12 @@
         height: 35px;
         width: 230px;
         cursor: pointer;
+    }
+
+    >a {
+        font-size: 14px;
+        margin-top: 20px;
+        text-decoration: none;
     }
 }
 
